--- a/public/index.html
+++ b/public/index.html
@@ -149,7 +149,9 @@
                             Carrera de la que te graduaste y una breve descripcion de ti.
                         </h1>
                     </div>
-                    <button class="boton postularse">Postularse</button>
+                    <form action="/postular" method="get">
+                        <button type="submit" class="boton postular">Postularse</button>
+                    </form>
                 </div>
                 <div class="contratacion">
                     <div class="cofertantes">
@@ -161,7 +163,9 @@
                             o tu empresa
                         </h1>
                     </div>
-                    <button class="boton contratar">Contratar</button>
+                    <form action="/contratar" method="get">
+                        <button type="submit" class="boton contratar">Contratar</button>
+                    </form>
                 </div>
             </div>
         </div>
