intento cambio isra

--- a/public/contratar.html
+++ b/public/contratar.html
@@ -6,6 +6,7 @@
     </head>       
     <body>
         <h1>Aqui ira un buscador</h1>
+        <p>cambio hecho por los huevos del ISRA</p>
         <form action="/index" method="get">
             <button type="submit">Atras</button>
         </form>
