respuesto primer envio isra

--- a/public/contratar.html
+++ b/public/contratar.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Aqui ira un buscador</h1>
         <p>cambio hecho por los huevos del ISRA</p>
+        <h2>recibido, cambio</h2>
         <form action="/index" method="get">
             <button type="submit">Atras</button>
         </form>
