--- a/public/postulacion.html
+++ b/public/postulacion.html
@@ -36,9 +36,7 @@
             .Nombre{
                 margin-top: -3vh;
             }
-            .name{
-                padding: 10px;
-            }
+        
             .Ciudad{
                 margin-top: -2vh;
             }
@@ -72,7 +70,7 @@
             <div class="Nombre">
                 <h1>Nombre</h1>
                 <div class="inputNombre">
-                    <input type="text" id="name" name="name">
+                    <input type="text" id="name" name="name" value="Nombre"> == $0
                 </div>    
             </div>
             <div class="Ciudad">
