--- a/public/postulacion.html
+++ b/public/postulacion.html
@@ -105,7 +105,7 @@
             <!-- Crearemos la franja superior donde se leera Postulantes -->
             <div class="franja_superior">
                 <ul>
-                    <li class="li2"><form action="/index" method="get"><button class="regresar" type="submit"><img src="/postular/imgflecha" height="64" width="64"></button></form></li>
+                    <li class="li2"><form action="/index" method="get"><button class="regresar" type="submit"></button></form></li>
                     <li class="li1"><h1 class="titulo">Postulantes</h1></li>
                 </ul>
             </div>
@@ -152,7 +152,6 @@
                 </div> 
             </div>
         </div>
-<<<<<<< Updated upstream
         <div class="Datos">
            <form>
             <div class="Nombre">
@@ -212,6 +211,8 @@
                     }
                 })
                 .catch(error => console.error('Error al leer el archivo:', error));
+            
+                
         </script>
     </body>
 </html>
