--- a/public/postulacion.html
+++ b/public/postulacion.html
@@ -3,6 +3,7 @@
 <head>
     <title>Ochurus Postulantes</title>
     <style>
+        @media screen and (min-device-width:1024px) and (max-device-width:1960px) and (min-device-height:569px) and (max-device-height:1080px) {
         @font-face {
             font-family: 'Monday Rain';
             src: url('Monday_Rain/Monday-Rain.eot');
@@ -110,6 +111,28 @@
 
         .BotonPostularse {
             margin-left: 2vw;
+        }}
+        @media screen and (min-device-width:1px) and (max-device-width:1280px) and (min-device-height:1px) and (max-device-height:1500px) {
+            @font-face {
+            font-family: 'Monday Rain';
+            src: url('Monday_Rain/Monday-Rain.eot');
+            src: url('Monday_Rain/Monday-Rain.eot?#iefix') format('embedded-opentype'),
+                url('Monday_Rain/Monday-Rain.woff2') format('woff2'),
+                url('Monday_Rain/Monday-Rain.woff') format('woff'),
+                url('Monday_Rain/Monday-Rain.ttf') format('truetype'),
+                url('Monday_Rain/Monday-Rain.svg#Monday Rain') format('svg');
+        }
+           .franja_superior{
+            margin: auto;
+            background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 73%, rgba(188,0,255,1) 100%);
+            display: flex;
+            flex-wrap: wrap;
+            min-width: fit-content;
+        } 
+        .FranjaInferior{
+            align-items: center;
+        }
+        
         }
     </style>
     <meta charset="UTF-8">
