--- a/public/index.html
+++ b/public/index.html
@@ -336,7 +336,7 @@
                             Carrera de la que te graduaste y una breve descripcion de ti.
                         </h1>
                     </div>
-                    <form action="/postular" method="get">
+                    <form action="/postular">
                         <button type="submit" class="boton postular">Postularse</button>
                     </form>
                 </div>
@@ -350,7 +350,7 @@
                             o tu empresa
                         </h1>
                     </div>
-                    <form action="/contratar" method="get">
+                    <form action="/contratar">
                         <button type="submit" class="boton contratar">Contratar</button>
                     </form>
                 </div>
