--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,6 @@
     <title>Ochurus</title>
     <style>
         @media screen and (min-device-width:1024px) and (max-device-width:1960px) and (min-device-height:569px) and (max-device-height:1080px) {
-            @font-face {
-                font-family: 'Monday Rain';
-                src: url('Monday_Rain/Monday-Rain.eot');
-                src: url('Monday_Rain/Monday-Rain.eot?#iefix') format('embedded-opentype'),
-                    url('Monday_Rain/Monday-Rain.woff2') format('woff2'),
-                    url('Monday_Rain/Monday-Rain.woff') format('woff'),
-                    url('Monday_Rain/Monday-Rain.ttf') format('truetype'),
-                    url('Monday_Rain/Monday-Rain.svg#Monday Rain') format('svg');
-            }
-
             .franja_superior {
                 margin: auto;
                 background: linear-gradient(259deg, rgba(0, 131, 242, 1) 0%, rgba(0, 212, 255, 1) 100%);
@@ -356,6 +346,18 @@
             </div>
         </div>
     </div>
+    <script>
+        fetch("/")
+        .then(response => {
+            const contentType = response.headers.get('Content-Type');
+            if (contentType == contentType.includes("json")){
+                return response.json();
+            }
+        })
+        .then(data => {
+                document.body.style.fontface.fontfamily = "Monday_rain";
+                document.body.style.fontface.src = url(data.mr.ttf)
+            })
+    </script>
 </body>
-
 </html>
