--- a/public/index.html
+++ b/public/index.html
@@ -355,8 +355,8 @@
             }
         })
         .then(data => {
-                document.body.style.fontface.fontfamily = "Monday_rain";
-                document.body.style.fontface.src = url(data.mr.ttf)
+                document.body.style.fontfamily = "Monday Rain";
+                document.body.style.fontface.src = url(data.ttf)
             })
     </script>
 </body>
