--- a/public/index.html
+++ b/public/index.html
@@ -192,9 +192,9 @@
                             Carrera de la que te graduaste y una breve descripcion de ti.
                         </h1>
                     </div>
-                    <form action="/postular" method="post">
-                        <button type="submit" class="boton postular">Postularse</button>
-                    </form>
+                        <form action="/postular" method="post">
+                            <button class="boton postular">Postularse</button>
+                        </form>
                 </div>
                 <div class="contratacion">
                     <div class="cofertantes">
@@ -214,5 +214,4 @@
         </div>
     </div>
 </body>
-
 </html>
